# robustaugmix

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: augmix_verification.md  mapping.md
experiments/: eval.py  reproduce.py  train.py
experiments/configs/: adversarial_cifar10.yaml  augmix_cifar10.yaml  reproduce.yaml  robustaugmix_cifar10.yaml  smoke.yaml  vanilla_cifar10.yaml
src/robustaugmix/: __init__.py
src/robustaugmix/attacks/: __init__.py  pgd.py
src/robustaugmix/augmentations/: augmix.py  ops.py
src/robustaugmix/eval/: evaluator.py
src/robustaugmix/models/: model.py
src/robustaugmix/training/: losses.py  trainer.py
src/robustaugmix/utils/: config.py  device.py  io.py  seed.py
tests/: test_augmix.py  test_cifar10c_loader.py  test_config.py  test_resume_policy.py  test_smoke_train.py
